Updated wofi configuration files

--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -1,4 +1,4 @@
-@import url('/home/hacker/.cache/wal/colors-waybar.css');
+@import url('/home/YOUR_USERNAME/.cache/wal/colors-waybar.css');
 
 window {
 margin: 0px;
